--- a/Fundamentos/dia-4-html-semantico/style.css
+++ b/Fundamentos/dia-4-html-semantico/style.css
@@ -141,11 +141,13 @@ ul li.button3:hover{
     margin-top: 15px;
 }
 
-.container-ref ul li a{
-    font-size: 46xp;
+
    
+.container-final.h4{
+    display: block;
+    margin: auto;
+    
+    
 }
 
-.container-video{
-    margin-left: 20px;
-}
+
